--- a/WebProjekt/Tuning/index.html
+++ b/WebProjekt/Tuning/index.html
@@ -31,6 +31,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../history.html">History</a></li>
                 <li><a href="#">Tuning</a></li>
+				<li><a href="../Galary/index.html">Galary</a></li>
                 <li style="float:right"><a href="#login">Login</a></li>
             </ul>
         </nav>
@@ -166,15 +167,20 @@
 			<p>
 			Now what do you need ? Since you are now in the midrace segment, you can already make a list:
 			</p>
-			
-			<ul>
-				<li>cylinder</li>
-				<li>crankshaft, crankshaft bearing</li>
-				<li>24 mm carburettor (more consumption but also more power)</li>
-				<li>intake system (diaphragm block and intake socket where the carburettor is located)</li>
-				<li>Exhaust (the sport exhaust is no longer sufficient)</li>
-				<li>Internal rotor ignition if required</li>
-			</ul>
+
+			<section>
+
+				<img src="img/21gaser.jpg">
+				<ul>
+					<li>cylinder</li>
+					<li>crankshaft, crankshaft bearing</li>
+					<li>24 mm carburettor (more consumption but also more power)</li>
+					<li>intake system (diaphragm block and intake socket where the carburettor is located)</li>
+					<li>Exhaust (the sport exhaust is no longer sufficient)</li>
+					<li>Internal rotor ignition if required</li>
+				</ul>
+
+			</section>
 		
 			<p>
 			An internal rotor ignition is on the one hand designed by the ignition unit for more power than the original ignition and on the other hand has a lower mass which has to be moved at the crankshaft. There are also differences. To adjust read this thread.
@@ -184,14 +190,19 @@
 			As a cylinder I will give you some examples with matching exhaust systems:
 			</p>
 			
-			<ul>
-				<li>Airsal Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
-				<li>Metrakit SP 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
-				<li>Athena Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
-				<li>Airsal Racing 80 ccm + Turbokit Carrera 80...</li>
-				<li>Barikit Alu Racing 80 ccm + Turbokit Carrera 80...</li>
-				<li>Hebo Tomahawk 80 ccm + Turbokit Carrera 80...</li>
-			</ul>
+			<section>
+
+				<img src="img/turbokit.jpg">
+				<ul>
+					<li>Airsal Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
+					<li>Metrakit SP 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
+					<li>Athena Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
+					<li>Airsal Racing 80 ccm + Turbokit Carrera 80...</li>
+					<li>Barikit Alu Racing 80 ccm + Turbokit Carrera 80...</li>
+					<li>Hebo Tomahawk 80 ccm + Turbokit Carrera 80...</li>
+				</ul>
+				
+			</section>
 			
 			<p>
 			please forget Malossi cylinder... the price is purchase disqualifying.
@@ -258,25 +269,35 @@
 			<h2>
 			We would have known each other:
 			</h2>
-			
-			<ul>
-				<li>Metrakit Pro Race 2/3 70 ccm</li>
-				<li>Metrakit Pro Race XL (self, dome turned out so that it doesn't protrude so far into the cylinder and long stroke shaft 43 mm)</li>
-				<li>-Barikit BRK 88</li>
-				<li>Top Performance 80, 85, 86, 87 (different bores and strokes)</li>
-				<li>Airsal X-Treme 88</li>
-				<li>Malossi MHR Team 80 (overpriced, hands off!)</li>
-			</ul>
+
+			<section class="clearfix">
+
+				<img src="img/airsailxtreme88.jpg">
+				<ul>
+					<li>Metrakit Pro Race 2/3 70 ccm</li>
+					<li>Metrakit Pro Race XL (self, dome turned out so that it doesn't protrude so far into the cylinder and long stroke shaft 43 mm)</li>
+					<li>-Barikit BRK 88</li>
+					<li>Top Performance 80, 85, 86, 87 (different bores and strokes)</li>
+					<li>Airsal X-Treme 88</li>
+					<li>Malossi MHR Team 80 (overpriced, hands off!)</li>
+				</ul>
+
+			</section>
 			
 			<p>
 			In addition there are different exhaust systems whose suitability should be actually clear:
 			</p>
 
-			<ul>
-				<li>Metrakit Pro Race 2/3</li>
-				<li>MVT Racing 80-90 ccm</li>
-				<li>Barikit BRK 90</li>
-			</ul>
+			<section>
+
+				<img src="img/mvt7080.jpg">
+				<ul>
+					<li>Metrakit Pro Race 2/3</li>
+					<li>MVT Racing 80-90 ccm</li>
+					<li>Barikit BRK 90</li>
+				</ul>
+				
+			</section>
 			
 			<p>
 			As a carburetor you can reach for a 28-32 mm. The intake system must of course fit again to the connection width of the carburettor.
