--- a/WebProjekt/index.html
+++ b/WebProjekt/index.html
@@ -3,7 +3,6 @@
     <head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/indexstyle.css">
-
         <meta charset="utf-8">
         <title>Motorbike | Home</title>
     </head>
@@ -30,6 +29,7 @@
               <li><a href="#home">Home</a></li>
               <li><a href="history.html">History</a></li>
               <li><a href="Tuning/index.html">Tuning</a></li>
+				<li><a href="Galary/index.html">Galary</a></li>
               <li style="float:right"><a href="#login">Login</a></li>
             </ul>
        </nav>
@@ -58,47 +58,11 @@
 			</div>
 		</section>
 
-       <article class="main">
+       <section class="main">
 
-		  	<section>
-		  		<p>We have decided for the topic moped because we are both very enthusiastic about moped and are also very much with our moped on the road.</p>
-		  	</section>
 
-		  	<section>
-				<p>Content of the website</p>
-				<ul>
-					<li>Start page with our 3 most fallen and known mopeds</li>
-					<li>History about Moped</li>
-					<li>A small tuning page for managers who want more power and fun :)</li>
-				</ul>
-		  	</section>
 
-		   	<section id="motorbikes">
-		   		<table>
-				  <tr>
-					<td><img src="img/apriliasx50.jpg"></td>
-					<td><img src="img/betarr50.jpg"></td>
-					<td><img src="img/derbisneder50.jpg"></td>
-				  </tr>
-				  <tr>
-					<td>Aprilia sx 50</td>
-					<td>Beta rr 50</td>
-					<td>Derbi senda 50</td>
-				  </tr>
-				  <tr>
-					<td>Kosten: 2800€</td>
-					<td>Kosten: 3550€</td>
-					<td>Kosten: 2700€</td>
-				  </tr>
-				  <tr>
-					<td>Leistung 2,5PS</td>
-					<td>Leistung 4PS</td>
-					<td>Leistung 3PS</td>
-				  </tr>
-				</table>
-		   	</section>
-
-      </article>
+       </section>
 
        <section class="footer">
           	<h2>Ride save :)</h2>
