--- a/WebProjekt/history.html
+++ b/WebProjekt/history.html
@@ -32,6 +32,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="#">History</a></li>
               <li><a href="Tuning/index.html">Tuning</a></li>
+                <li><a href="Galary/index.html">Galary</a></li>
               <li style="float:right"><a href="#login">Login</a></li>
             </ul>
        </nav>
