--- a/WebProjekt/Galary/index.html
+++ b/WebProjekt/Galary/index.html
@@ -34,114 +34,58 @@
             </ul>
         </nav>
 
-        <div class="gallery main" id="gallery">
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/39.jpeg " alt=""></div>
+        <div class="row main">
+            <div class="column">
+                <img src="MopedImgs/1.jpeg" style="width:100%">
+                <img src="MopedImgs/5.jpeg" style="width:100%">
+                <img src="MopedImgs/09.jpeg" style="width:100%">
+                <img src="MopedImgs/13.jpeg" style="width:100%">
+                <img src="MopedImgs/17.jpeg" style="width:100%">
+                <img src="MopedImgs/21.jpeg" style="width:100%">
+                <img src="MopedImgs/25.jpeg" style="width:100%">
+                <img src="MopedImgs/29.jpeg" style="width:100%">
+                <img src="MopedImgs/32.jpeg" style="width:100%">
+                <img src="MopedImgs/40.jpeg" style="width:100%">
             </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/2.jpeg " alt=""></div>
+
+            <div class="column">
+                <img src="MopedImgs/2.jpeg" style="width:100%">
+                <img src="MopedImgs/06.jpeg" style="width:100%">
+                <img src="MopedImgs/10.jpeg" style="width:100%">
+                <img src="MopedImgs/14.jpeg" style="width:100%">
+                <img src="MopedImgs/18.jpeg" style="width:100%">
+                <img src="MopedImgs/22.jpeg" style="width:100%">
+                <img src="MopedImgs/26.jpeg" style="width:100%">
+                <img src="MopedImgs/30.jpeg" style="width:100%">
+                <img src="MopedImgs/33.jpeg" style="width:100%">
+                <img src="MopedImgs/39.jpeg" style="width:100%">
             </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/5.jpeg " alt=""></div>
+
+            <div class="column">
+                <img src="MopedImgs/03.jpeg" style="width:100%">
+                <img src="MopedImgs/7.jpeg" style="width:100%">
+                <img src="MopedImgs/4.jpeg" style="width:100%">
+                <img src="MopedImgs/15.jpeg" style="width:100%">
+                <img src="MopedImgs/19.jpeg" style="width:100%">
+                <img src="MopedImgs/23.jpeg" style="width:100%">
+                <img src="MopedImgs/27.jpeg" style="width:100%">
+                <img src="MopedImgs/34.jpeg" style="width:100%">
+                <img src="MopedImgs/35.jpeg" style="width:100%">
+                <img src="MopedImgs/40.jpeg" style="width:100%">
+                <img src="MopedImgs/38.jpeg" style="width:100%">
+                <img src="MopedImgs/41.jpeg" style="width:100%">
             </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/6.jpeg " alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/35.jpeg " alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/8.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/9.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/10.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/11.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/12.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/37.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/14.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/41.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/17.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/18.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/19.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/38.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/21.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/22.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/23.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/24.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/25.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/26.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/27.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/40.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/29.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/30.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/31.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/32.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/33.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/7.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/36.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/13.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/20.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/28.jpeg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="MopedImgs/34.jpeg" alt=""></div>
+
+            <div class="column">
+                <img src="MopedImgs/37.jpeg" style="width:100%">
+                <img src="MopedImgs/8.jpeg" style="width:100%">
+                <img src="MopedImgs/12.jpeg" style="width:100%">
+                <img src="MopedImgs/16.jpeg" style="width:100%">
+                <img src="MopedImgs/20.jpeg" style="width:100%">
+                <img src="MopedImgs/24.jpeg" style="width:100%">
+                <img src="MopedImgs/28.jpeg" style="width:100%">
+                <img src="MopedImgs/31.jpeg" style="width:100%">
+                <img src="MopedImgs/11.jpeg" style="width:100%">
             </div>
         </div>
 
