--- a/WebProjekt/index.html
+++ b/WebProjekt/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
     <head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/indexstyle.css">
         <meta charset="utf-8">
         <title>Motorbike | Home</title>
     </head>
-	
+
     <body>
 
         <article class="header clearfix">
@@ -60,7 +61,17 @@
 
        <section class="main">
 
-
+         <dl>
+           <dt><img src="img/Gilera.jpg"></dt>
+           <dd></dd>
+           <dt><img src="img/Beta.jpg"></dt>
+           <dd></dd>
+           <dt><img src="img/Derbi.jpg"></dt>
+           <dd></dd>
+           <dt><img src="img/aprilias.jpg"></dt>
+           <dd></dd>
+         </dl>
+         
 
        </section>
 
