--- a/WebProjekt/Tuning/index.3.html
+++ b/WebProjekt/Tuning/index.3.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../history.html">History</a></li>
-                <li><a href="#">Tuning.3</a></li>
+                <li><a href="#">Tuning 3</a></li>
 				<li><a href="../Galary/index.html">Galary</a></li>
                 <li style="float:right"><a href="#login">Login</a></li>
             </ul>
@@ -38,7 +38,7 @@
 
         <nav>
             <ul>
-              <li><a href="index.1.html">Tuning.1</a></li>
+              <li><a href="index.html">Tuning.1</a></li>
               <li><a href="index.2.html">Tuning.2</a></li>
                 <li><a href="#">Tuning.3</a></li>
             </ul>
@@ -169,11 +169,6 @@
             <h2>Ride save :)</h2>
             <p>Copy © Right David/Fabian</p>
         </section>
-
-        <script type="text/javascript">
-            if (screen.width < 800)
-                window.location = "HandyError.html";
-        </script>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
