--- a/WebProjekt/index.html
+++ b/WebProjekt/index.html
@@ -29,7 +29,7 @@
             <ul>
               <li><a href="#home">Home</a></li>
               <li><a href="history.html">History</a></li>
-              <li><a href="Tuning/index.html">Tuning</a></li>
+              <li><a href="Tuning1-3/index.1.html">Tuning.1</a></li>
 				<li><a href="Galary/index.html">Galary</a></li>
               <li style="float:right"><a href="#login">Login</a></li>
             </ul>
@@ -61,17 +61,65 @@
 
        <section class="main">
 
-         <dl>
-           <dt><img src="img/Gilera.jpg"></dt>
-           <dd></dd>
-           <dt><img src="img/Beta.jpg"></dt>
-           <dd></dd>
-           <dt><img src="img/Derbi.jpg"></dt>
-           <dd></dd>
-           <dt><img src="img/aprilias.jpg"></dt>
-           <dd></dd>
-         </dl>
-         
+         <!--<dl>
+
+           <section class="picturelefttop">
+
+             <p>
+           <img src="img/Gilera.jpg">
+          </p>
+        <p>The average costs at Gilera are 2700</p>
+          </section>
+
+            <section class="picturtoprigth">
+
+              <p>
+           <img src="img/Beta.jpg">
+            </p>
+         </section>
+
+         <section class="picturebotenleft">
+
+           <p>
+           <img src="img/Derbi.jpg">
+          </p>
+         </section>
+
+         <section class="picturebottenrifht">
+
+           <p>
+           <img src="img/aprilias.jpg">
+          </p>
+         </section>
+           </dl>-->
+
+           <section id="motorbikemaker">
+   		   		<table>
+   				  <tr>
+   					<td><img src="img/Gilera.jpg"></td>
+   					<td><img src="img/Beta.jpg"></td>
+   					<td><img src="img/Derbi.jpg"></td>
+            <td><img src="img/aprilias.jpg"></td>
+   				  </tr>
+   				  <tr>
+   					<td><p>The average costs at Gilera are 2700 €</p></td>
+   					<td><p>The average costs at Beta are 3500 €</p></td>
+   					<td><p>The average costs at Derbi are 2700 €</p></td>
+            <td><p>The average costs at Aprilia are 3000 €</p></td>
+   				  </tr>
+
+   				</table>
+        </section>
+        <br></br>
+
+        <section id="motoracerage">
+          <p>The average costs of a Motorcikle is around 3000 €</p>
+        </section>
+
+        <section id="linear-gardient">
+          <p>Gelera 90% costs   Beta 116% costs   Derbi 90% costs   Aprillia 100% costs</p>
+        </section>
+
 
        </section>
 
