--- a/WebProjekt/Galary/index.html
+++ b/WebProjekt/Galary/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../history.html">History</a></li>
-                <li><a href="../Tuning/index.html">Tuning</a></li>
+                <li><a href="../Tuning1-3/index.1.html">Tuning.1</a></li>
                 <li><a href="#">Galary</a></li>
                 <li style="float:right"><a href="#login">Login</a></li>
             </ul>
